--- a/package.json
+++ b/package.json
@@ -1,52 +1,53 @@
 {
-  "name": "ts-home",
-  "version": "1.0.0",
-  "description": "社区打造",
-  "main": "webpack.config.js",
-  "scripts": {
-    "watch": "tsc -w",
-    "server": "lite-server",
-    "start": "webpack-dev-server "
-  },
-  "license": "ISC",
-  "devDependencies": {
-    "autoprefixer": "^7.1.1",
-    "css-loader": "^0.28.4",
-    "file-loader": "^0.11.2",
-    "postcss-loader": "^2.0.6",
-    "resolve-url-loader": "^2.0.2",
-    "style-loader": "^0.18.2",
-    "ts-loader": "^2.1.0",
-    "url-loader": "^0.5.9",
-    "webpack-dev-server": "^2.4.5"
-  },
-  "dependencies": {
-    "@types/angular": "^1.6.18",
-    "@types/angular-route": "^1.3.3",
-    "angular": "^1.6.4",
-    "angular-animate": "^1.6.4",
-    "angular-route": "^1.6.4",
-    "body-parser": "~1.17.1",
-    "cheerio": "^1.0.0-rc.1",
-    "config-lite": "^2.0.0",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^1.3.2",
-    "cookie-parser": "~1.4.3",
-    "css-loader": "^0.28.4",
-    "debug": "~2.6.3",
-    "ejs": "~2.5.6",
-    "express": "~4.15.2",
-    "express-session": "^1.15.3",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.28.0",
-    "mongoose": "^4.10.4",
-    "morgan": "~1.8.1",
-    "multer": "^1.3.0",
-    "postcss-loader": "^2.0.6",
-    "resolve-url-loader": "^2.0.2",
-    "style-loader": "^0.18.2",
-    "typescript": "^2.3.4",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
-  }
+    "name": "ts-home",
+    "version": "1.0.0",
+    "description": "社区打造",
+    "main": "webpack.config.js",
+    "scripts": {
+        "watch": "tsc -w",
+        "server": "NODE_ENV=production supervisor app",
+        "start": "webpack-dev-server ",
+        "heroku": "NODE_ENV=production node --harmony app"
+    },
+    "license": "ISC",
+    "devDependencies": {
+        "autoprefixer": "^7.1.1",
+        "css-loader": "^0.28.4",
+        "file-loader": "^0.11.2",
+        "postcss-loader": "^2.0.6",
+        "resolve-url-loader": "^2.0.2",
+        "style-loader": "^0.18.2",
+        "ts-loader": "^2.1.0",
+        "url-loader": "^0.5.9",
+        "webpack-dev-server": "^2.4.5"
+    },
+    "dependencies": {
+        "@types/angular": "^1.6.18",
+        "@types/angular-route": "^1.3.3",
+        "angular": "^1.6.4",
+        "angular-animate": "^1.6.4",
+        "angular-route": "^1.6.4",
+        "body-parser": "~1.17.1",
+        "cheerio": "^1.0.0-rc.1",
+        "config-lite": "^2.0.0",
+        "connect-flash": "^0.1.1",
+        "connect-mongo": "^1.3.2",
+        "cookie-parser": "~1.4.3",
+        "css-loader": "^0.28.4",
+        "debug": "~2.6.3",
+        "ejs": "~2.5.6",
+        "express": "~4.15.2",
+        "express-session": "^1.15.3",
+        "file-loader": "^0.11.2",
+        "html-webpack-plugin": "^2.28.0",
+        "mongoose": "^4.10.4",
+        "morgan": "~1.8.1",
+        "multer": "^1.3.0",
+        "postcss-loader": "^2.0.6",
+        "resolve-url-loader": "^2.0.2",
+        "style-loader": "^0.18.2",
+        "typescript": "^2.3.4",
+        "webpack": "^2.6.1",
+        "webpack-dev-server": "^2.4.5"
+    }
 }
