--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "style-loader": "^0.18.2",
         "ts-loader": "^2.1.0",
         "url-loader": "^0.5.9",
+        "supervisor": "^0.12.0",
         "webpack-dev-server": "^2.4.5",
         "webpack": "^2.6.1"
     },
